This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.2.X - Not released yet
==============================
+ Ticket #1792, Show an OSD message and a status message when a favorite is
  created via the keyboard shortcut
* Ticket #734, A unicode encoding will now be used for the ini file. Old ASCII
  ini files will be automatically converted to unicode. Favorites with unicode
  filenames are now correctly handled when using an ini file
* Ticket #1693, [VSFilter] Remove the feature preventing the screensaver from
  running when VSFilter is active as it is a job for players not for filters
* Ticket #1733/#2029, Include subfolders when opening a folder using the command
  line or via the explorer context menu
* Ticket #2157, Show the [DXVA] indicator even when playback is paused
* Ticket #2163, Improve the "Save As" dialog: the dialog is updated more regularly and
  the units for the sizes and the speed are now automatically adapted to the values
* Reduced the maximum number of packets in the Queue, except for AVI. This will
  reduce the amount of memory consumed by the player
* Improved the "Open directory" dialog: the checkbox will now use only one line
  when possible and the overall dialog will look better when using XP
* Updated ffmpeg
* Updated MediaInfoLib to v0.7.55
* Updated ZenLib to v0.4.26
* Updated SoundTouch to v1.7.0pre r142
* Updated French, Turkish, Czech, Russian, Ukrainian, simplified Chinese, Japanese,
  traditional Chinese, Italian and Polish translations
* Removed GTSdll support
! Broken playback and picture on H.264 & MPEG2 interlaced with DXVA on
  intergrated Intel adapter
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox
! Improve the "Open" dialog: